--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,7 @@ jobs:
           RESPONSE=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $" "https://api.github.com/search/issues?q=milestone:v13.1.2+type:pr+repo:$GITHUB_REPOSITORY")
 
           PRS_IN_MILESTONE=$(echo "[]")
+          echo $PRS_IN_MILESTONE
           if [ "${#PRS_IN_MILESTONE[@]}" == "[]" ]; then
             echo "PRS_IN_MILESTONE is empty"
           else
