--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: test
         run: |
-          echo ${{ github.event.pull_request.milestone }}
+          echo ${{ github.event.pull_request.milestone }} | jq
 
       - name: Install jq
         run: |
