--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install jq
+          echo ${{ env.CURRENT_VERSION }}
 
       - name: Fetch PRs in current version's milestone and write a question to ChatGPT
         run: |
