--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install jq
 
+      - name: Test
+        run: |
+          echo ${{ github.event.pull_request.milestone.title }}
+
       - name: Fetch PRs in current version's milestone and write a question to ChatGPT
         run: |
           RESPONSE=$(curl -H "Accept: application/vnd.github+json" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/search/issues?q=milestone:${{ github.event.pull_request.milestone.title }}+type:pr+repo:$GITHUB_REPOSITORY")
