--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Test
         run: |
-          echo ${{ toJson(github.event.milestone) }} | jq
+          echo ${{ toJson(github.event) }} | jq
 
       - name: Fetch PRs in current version's milestone and write a question to ChatGPT
         run: |
