--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,6 @@ jobs:
 
       - name: Fetch PRs in current version's milestone and write a question to ChatGPT
         run: |
-          echo ${{ toJSON(github.event.pull_request) }}
           RESPONSE=$(curl -H "Accept: application/vnd.github+json" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/search/issues?q=milestone:${{ env.CURRENT_VERSION }}+type:pr+repo:$GITHUB_REPOSITORY")
 
           if [[ $(echo "$RESPONSE" | jq '.total_count') == null ]]; then
@@ -31,12 +30,15 @@ jobs:
           fi
 
           PRS_IN_MILESTONE=$(echo "$RESPONSE" | jq '.items[] | select(.pull_request.merged_at != null and (.labels | map(select(.name == "release")) | length == 0)) | {title: .title, number: .number, url: .html_url, package: .labels[].name}' | jq -s tostring | sed 's/^"//;s/"$//')
-          echo "CHAT_GPT_CONTENT=$(echo Write down a markdown content based on this data\\n $PRS_IN_MILESTONE \\nin the following format:\\n### package\\n\\n- title [#number]\(url\)\\n- title [#number]\(url\)\\n\\n### other package\\n\\n- title [#number]\(url\)\\n- title [#number]\(url\)\\n\\n but with the title name of common coming first, followed by the alphabetically sorted packages.)" >> $GITHUB_ENV
+          echo "CHAT_GPT_CONTENT=$(echo Please write a markdown content based on the provided data, $PRS_IN_MILESTONE, in the following format:\n\n### Common\n\n- Title #number\n- Title #number\n\n### Other Packages\n\n- Title #number\n- Title #number\n\nPlease note that the Common package should be listed first, followed by the other packages sorted alphabetically.)" >> $GITHUB_ENV
+          echo "PR_LIST=$PRS_IN_MILESTONE" >> $GITHUB_ENV
 
       - name: Request ChatGPT to write down CHANGELOG
         env:
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
         run: |
+          CHAT_GPT_PROMPT=(echo "${{ env.PR_LIST }}" | sed 's/^"//;s/"$//')
+          echo $CHAT_GPT_PROMPT
           RESPONSE=$(curl -X POST https://api.openai.com/v1/chat/completions \
            -H "Content-Type: application/json" \
            -H "Authorization: Bearer $OPENAI_KEY" \
@@ -63,7 +65,7 @@ jobs:
 
       - name: Commit and push updated CHANGELOG
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TRIPLE_BOT_GITHUB_TOKEN }}
         run: |
           git config --local user.email "${{ env.COMMIT_USER_EMAIL }}"
           git config --local user.name "${{ env.COMMIT_USER_NAME }}"
