--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,8 +36,8 @@ jobs:
         env:
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
         run: |
-          CHAT_GPT_PROMPT=(echo (${{ env.PR_LIST }} | sed 's/^"//;s/"$//'))
-          echo $CHAT_GPT_PROMPT
+          CHAT_GPT_PROMPT=(echo "${{ env.PR_LIST }}" | sed 's/^"//;s/"$//')
+          echo ${{ env.PR_LIST }}
           RESPONSE=$(curl -X POST https://api.openai.com/v1/chat/completions \
            -H "Content-Type: application/json" \
            -H "Authorization: Bearer $OPENAI_KEY" \
