--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,8 @@ jobs:
         env:
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
         run: |
-          echo ${{ env.PR_LIST }} | sed 's/^"//;s/"$//'
+          HELLO=$(echo ${{ env.PR_LIST }} | sed 's/^"//;s/"$//')
+          echo $HELLO
           RESPONSE=$(curl -X POST https://api.openai.com/v1/chat/completions \
            -H "Content-Type: application/json" \
            -H "Authorization: Bearer $OPENAI_KEY" \
