--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,8 +37,8 @@ jobs:
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
         run: |
           PR_LIST=$(echo ${{ env.PRS_IN_MILESTONE }} | sed 's/^"//;s/"$//')
-          CHAT_GPT_PROMPT=$(echo Hello, world! $PR_LISt  wow cool)
-          echo $CHAT_GPT_PROMPT
+          CHAT_GPT_PROMPT=$(echo Please write a markdown content based on the provided data, $PR_LIST, in the following format:\n\n### Common\n\n- Title #number\n- Title #number\n\n### Other Packages\n\n- Title #number\n- Title #number\n\nPlease note that the Common package should be listed first, followed by the other packages sorted alphabetically.)
+
           RESPONSE=$(curl -X POST https://api.openai.com/v1/chat/completions \
            -H "Content-Type: application/json" \
            -H "Authorization: Bearer $OPENAI_KEY" \
