--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
           fi
 
           PRS_IN_MILESTONE=$(echo "$RESPONSE" | jq '.items[] | select(.pull_request.merged_at != null and (.labels | map(select(.name == "release")) | length == 0)) | {title: .title, number: .number, url: .html_url, package: .labels[].name}' | jq -s tostring | sed 's/^"//;s/"$//')
-          echo "CHAT_GPT_CONTENT=$(echo Please write a markdown content based on the provided data,\\n$PRS_IN_MILESTONE\\nin the following format:\\n### package\\n\\n- title [#number]\(url\)\\n- title [#number]\(url\)\\n\\n### package\\n\\n- title [#number]\(url\)\\n- title [#number]\(url\)\\n\\nPlease note that the Common package should be listed first, followed by the other packages sorted alphabetically. Additionally, the list should be sorted by number in ascending order.)" >> $GITHUB_ENV
+          echo "CHAT_GPT_CONTENT=$(echo Please write a markdown content based on the provided data,\\n$PRS_IN_MILESTONE\\nin the following format:\\n### package\\n\\n- title [#lower number]\(url\)\\n- title [#higher number]\(url\)\\n\\n### package\\n\\n- title [#lower number]\(url\)\\n- title [#higher number]\(url\)\\n\\nPlease note that the common package should be listed first (if it exists), followed by the other packages sorted alphabetically.)" >> $GITHUB_ENV
       
       - name: Request ChatGPT to write down CHANGELOG
         env:
