--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -26,7 +26,7 @@ jobs:
           CHANGED_FILES=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
           "https://api.github.com/repos/${{ github.repository }}/compare/${{ github.event.pull_request.base.ref }}...${{ github.event.pull_request.head.ref }}" \
-          | jq '.files[]')
+          | jq '.files[].filename' | sed -n 's/^package\/\([^\/]*\)\/.*$/\1/p')
           echo "::set-output name=files::${CHANGED_FILES}"
           
       - name: Print changed files
