--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -27,7 +27,7 @@ jobs:
           -H "Accept: application/vnd.github.v3+json" \
           "https://api.github.com/repos/${{ github.repository }}/compare/${{ github.event.pull_request.base.ref }}...${{ github.event.pull_request.head.ref }}" \
           | jq '.files[].filename' | sed -n 's/^package\/\([^\/]*\)\/.*$/\1/p')
-          echo "::set-output name=files::${CHANGED_FILES}"
+          echo $CHANGED_FILES
           
       - name: Print changed files
         run: |
