--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -26,5 +26,6 @@ jobs:
           CHANGED_FILES=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
           "https://api.github.com/repos/${{ github.repository }}/compare/${{ github.event.pull_request.base.ref }}...${{ github.event.pull_request.head.ref }}" \
-          | jq '.files[].filename' | sed -n 's/^package\/\([^\/]*\)\/.*$/\1/p')
+          | jq '.files[].filename')
           echo $CHANGED_FILES
+          echo $CHANGED_FILES | sed -n 's/^package\/\([^\/]*\)\/.*$/\1/p'
