--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -28,4 +28,4 @@ jobs:
           "https://api.github.com/repos/${{ github.repository }}/compare/${{ github.event.pull_request.base.ref }}...${{ github.event.pull_request.head.ref }}" \
           | jq '.files[].filename')
           echo $CHANGED_FILES
-          echo $CHANGED_FILES | sed -n 's/^package\/\([^\/]*\)\/.*$/\1/p'
+          echo $CHANGED_FILES | sed -n 's/^package\/\([^/]*\)\/.*$/\1/p'
