--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -23,9 +23,8 @@ jobs:
         id: files
         run: |
           echo "Getting changed files..."
-          CHANGED_FILES=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          CHANGED_PACKAGES=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
           "https://api.github.com/repos/${{ github.repository }}/compare/${{ github.event.pull_request.base.ref }}...${{ github.event.pull_request.head.ref }}" \
-          | jq '.files[].filename' | sed -n 's/^package\/\([^/]*\)\/.*$/\1/p')
-          echo $CHANGED_FILES
-          echo 123
+          | jq '.files[].filename | capture("packages/(?<packageName>[^/]+)/")')
+          echo $CHANGED_PACKAGES
