--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -26,5 +26,5 @@ jobs:
           CHANGED_PACKAGES=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
           "https://api.github.com/repos/${{ github.repository }}/compare/${{ github.event.pull_request.base.ref }}...${{ github.event.pull_request.head.ref }}" \
-          | jq '[].files[].filename | capture("packages/(?<packageName>[^/]+)/") .packageName] | unique')
+          | jq '[.files[].filename | capture("packages/(?<packageName>[^/]+)/") .packageName] | unique')
           echo $CHANGED_PACKAGES
